--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
