--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "emailjs-com": "^2.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "react": "^16.4.2",
