--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "aws-amplify": "^1.1.28",
+    "aws-amplify-react": "^2.3.8",
+    "awsmobile-cli": "^1.1.7",
     "emailjs-com": "^2.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
